// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptInstallFailedStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Installation attempt failed"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/troubleshootInstallation"
    >
      Troubleshooting installation problems
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    We were unable to install the latest version of Accessibility Insights for Android Service on your device. You can try installing the service yourself, from your device, or choose one of the options below.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      Object {
        "id": "1",
        "isEmulator": false,
        "model": "Super-Duper Gadget",
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptInstallFailedStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Installation attempt failed"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/troubleshootInstallation"
    >
      Troubleshooting installation problems
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    We were unable to install the latest version of Accessibility Insights for Android Service on your device. You can try installing the service yourself, from your device, or choose one of the options below.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      Object {
        "id": "1",
        "isEmulator": true,
        "model": "Emulator Extraordinaire",
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;
